 - Added Direct chat management (just char selection though, direct chat isn't working yet, and selection isn't saved in DB yet)
 - Added Genrep list management. List is now working and saved. Registration of GR doesn't register the right GR though (working on that)
 - Added loading of worldmodel.def and appplace.def files for later (very soon) use.
 - Migrated most of message handling to new decoder system.
    Item use is migrated in "a compatibility mode" until item management is fully based on world .dat  and worldmodel.def files

[GAME]
Removed game/_inc directory
Removed all UDP message analysis and handling from gameserver.cpp
Created mode decoder classes in game/decoder
Moved most UDP packet creation code from gameserver.cpp to msgbuilder.cpp, using PMessages
Added PBuddyList class
Added PGenrepList class
Added loading/saving of Buddy List and Genrep List to char loading/saving in chars.cpp

Added new members to PChar to store skin color and brightness (aka "darkness")  in chars.h and char.cpp (not saved in DB yet)
Added new commands "@color" and "@brightness"

====================
Hammag; 27.09.2006 20:00 GMT+1
----------
<General changes>
 - Added loading of appartements.def and respawn.def files for later (very soon) use.
 - Corrected and modified dependencies management in make system.
    No unwanted file date change should occure anymore

[GAME]
Zoning to appartment now make use of appartements.def data instead of hardcoded data (zoning.cpp)
Added PMySQL::GetAptLocation() method in sql.cpp
Prepared some modification for WorldItems and Appartments in sql.cpp (these methodes will later be put in specific classes)

====================
Hammag; 28.09.2006 17:30 GMT+1
----------
<General changes>
 - Updated the gamserver DB install file to version 5 (database/GameDB5.zip) needed
    by the current TinNS version.
 - Added a SQL file to update existing gamserver DB from version 4 to version 5
    (database/GameDB4_to_GameDB5.sql)