@@ -97,3 +97,7 @@ gm_slots = 10
 // locations of def files
 // Default is ./defs
 defs_path = ./defs
+
+// locations of world files
+// Default is ./worlds
+worlds_path = ./worlds
